--- a/Riskvalve/Views/Assessment/Index.cshtml
+++ b/Riskvalve/Views/Assessment/Index.cshtml
@@ -60,6 +60,7 @@
                         </div>
                         <div class="tab-pane" id="template_inspection">
                             <form class="assessment-form">
+                                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                                 <div class="row">
                                     <div class="col-lg-2">
                                         <div class="assessment-tab-content-submenu">
@@ -1253,6 +1254,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <form class="inspection-form inspection-tab">
+                    <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                     <div class="box">
                         <div class="subheader m-0">
                             <b>Asset Information</b>
@@ -1478,6 +1480,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <form class="inspection-form inspection-tab">
+                    <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                     <div class="box">
                         <div class="subheader m-0">
                             <b>Asset Information</b>
@@ -1620,6 +1623,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <form class="inspection-form inspection-tab">
+                    <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                     <input type="hidden" name="tempData" />
                     <input type="hidden" name="tabNum" />
                     <div class="sub-container">
@@ -1654,6 +1658,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <form class="inspection-form inspection-tab">
+                    <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                     <input type="hidden" name="tempData" />
                     <input type="hidden" name="tabNum" />
                     <div class="sub-container">
