--- a/Riskvalve/Views/AssetRegister/Area.cshtml
+++ b/Riskvalve/Views/AssetRegister/Area.cshtml
@@ -76,6 +76,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form class="asset-form common-form">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <div class="box">
                     <div class="subheader m-0">
                         <b>Add/Edit New Area</b>
