--- a/Riskvalve/Views/AssetRegister/Platform.cshtml
+++ b/Riskvalve/Views/AssetRegister/Platform.cshtml
@@ -78,6 +78,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form id="platform-form" class="common-form">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <input id="field-platform-mode" type="hidden">
                 <input id="field-platform-id" name="platformid" type="hidden">
                 <div class="box">
