--- a/Riskvalve/Views/Home/Detail.cshtml
+++ b/Riskvalve/Views/Home/Detail.cshtml
@@ -26,6 +26,7 @@
                 <div class="row ">
                     <div class="col-md-12">
                         <form class="filter-area">
+                            <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                             <select id="ddlBusinessArea" class="form-select form-select-sm filter-select"
                                 aria-label="Small select example">
                                 <option value="">All Area</option>
@@ -252,6 +253,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form class="inspection-form inspection-tab">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <div class="box">
                     <div class="subheader m-0">
                         <b>Asset Information</b>
@@ -441,6 +443,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form class="inspection-form inspection-tab">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <div class="box">
                     <div class="subheader m-0">
                         <b>Asset Information</b>
@@ -578,6 +581,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form class="inspection-form inspection-tab">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <div class="box">
                     <div class="subheader m-0">
                         <b>Asset Information</b>
