--- a/Riskvalve/Views/Login/Index.cshtml
+++ b/Riskvalve/Views/Login/Index.cshtml
@@ -27,6 +27,7 @@
                 Valve Integrity Management System</p>
             <p class="text-center">Input your Credential (Email and Password) to enter Web Application</p>
             <form class="login-form">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <input id="timezone" type="hidden" name="timezone">
                 <div class="label">
                     Email
