--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -50,6 +50,7 @@
                     </div>
                     <div class="tab-pane show active" role="tabpanel" id="template_inspection">
                         <form class="inspection-form">
+                            <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                             <div class="box">
                                 <div class="subheader m-0">
                                     <b>Asset Information</b>
