--- a/Riskvalve/Views/Shared/ModalAsset.cshtml
+++ b/Riskvalve/Views/Shared/ModalAsset.cshtml
@@ -19,6 +19,7 @@
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <form id="asset-form" class="common-form">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <input id="field-asset-mode" type="hidden" />
                 <input id="field-asset-id" name="assetid" type="hidden" />
                 <div class="box">
