--- a/Riskvalve/Views/Tool/ImportAssetRegister.cshtml
+++ b/Riskvalve/Views/Tool/ImportAssetRegister.cshtml
@@ -21,6 +21,7 @@
                 <div class="row">
                     <div class="col-md-6" style="padding-left:20px;">
                         <form>
+                            <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                             <div class="row g-3 align-items-center">
                                 <div class="col-auto">
                                     Download the template file <a href="@urltemplate" target="_blank">here</a>
