--- a/Riskvalve/Views/User/Index.cshtml
+++ b/Riskvalve/Views/User/Index.cshtml
@@ -98,6 +98,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form class="user-form common-form">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <input id="field-user-mode" type="hidden">
                 <input id="field-user-id" name="userid" type="hidden">
                 <div class="box">
