--- a/Riskvalve/Views/Shared/InspectionAssessmentSidebar.cshtml
+++ b/Riskvalve/Views/Shared/InspectionAssessmentSidebar.cshtml
@@ -24,6 +24,7 @@
     <div class="inspection-sidebar-container">
         <section class="sidebar inspection-sidebar" id="tree-menu">
             <form class="form-inline" role="form">
+                <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                 <div class="position-relative">
                     <input type="text" class="form-control" id="searchForm"
                         placeholder="Search Area / Platform / Asset">
