--- a/Riskvalve/Views/Tool/ImportInspectionMaintenance.cshtml
+++ b/Riskvalve/Views/Tool/ImportInspectionMaintenance.cshtml
@@ -22,6 +22,7 @@
                 <div class="row">
                     <div class="col-md-6" style="padding-left:20px;">
                         <form id="inspection-form">
+                            <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                             <div class="row g-3 align-items-center">
                                 <div class="col-auto">
                                     Download the template file <a href="@urltemplateInspection" target="_blank">here</a>
@@ -59,6 +60,7 @@
                 <div class="row">
                     <div class="col-md-6" style="padding-left:20px;">
                         <form id="maintenance-form">
+                            <input type="hidden" name="__RequestVerificationToken" value="@tokens.RequestToken" />
                             <div class="row g-3 align-items-center">
                                 <div class="col-auto">
                                     Download the template file <a href="@urltemplateMaintenance"
