feature: tidak recalculate jika sudah terisi integration status

--- a/Riskvalve/Views/Assessment/Index.cshtml
+++ b/Riskvalve/Views/Assessment/Index.cshtml
@@ -1202,7 +1202,8 @@
                                                                             <div class="status-box green">
                                                                             </div>
                                                                         </span> *@
-                                                                        <select id="integrity-status" class="form-select form-select-sm" name="IntegrityStatus">
+                                                                        <select id="integrity-status" class="form-select form-select-sm" name="IntegrityStatus" required>
+                                                                            <option disabled selected>-- Select One --</option>
                                                                             <option value="Very High Priority">Very High Priority</option>
                                                                             <option value="High Priority">High Priority</option>
                                                                             <option value="Medium Priority">Medium Priority</option>
