update incase sensitif

--- a/Riskvalve/Views/Shared/ModalAsset.cshtml
+++ b/Riskvalve/Views/Shared/ModalAsset.cshtml
@@ -112,27 +112,27 @@
                                 <div class="form-group-inline">
                                     <label for="field-asset-status">Status</label>
                                     <select id="field-asset-status" name="status" class="form-control" required>
-                                        <option value="In-service">In-service</option>
-                                        <option value="Waiting for Refurbishment">Waiting for Refurbishment</option>
-                                        <option value="Spare">Spare</option>
+                                        <option value="in-service">In-Service</option>
+                                        <option value="waiting for refurbishment">Waiting for Refurbishment</option>
+                                        <option value="spare">Spare</option>
                                     </select>
                                 </div>
                                 <div class="form-group-inline">
                                     <label for="field-asset-usagetype">Usage Type</label>
                                     <select id="field-asset-usagetype" name="usagetype" class="form-control" required>
-                                        <option value="Manual Valve">Manual Valve</option>
-                                        <option value="Auto On-Off Valve">Auto On-Off Valve</option>
-                                        <option value="Control Valve">Control Valve</option>
-                                        <option value="PSV/PRV">PSV/PRV</option>
+                                        <option value="manual valve">Manual Valve</option>
+                                        <option value="auto on-off valve">Auto On-Off Valve</option>
+                                        <option value="control valve">Control Valve</option>
+                                        <option value="psv/prv">PSV/PRV</option>
                                     </select>
                                 </div>
                                 <div class="form-group-inline">
                                     <label for="field-asset-actuation">Actuation</label>
                                     <select id="field-asset-actuation" name="actuation" class="form-control" required>
-                                        <option value="Pneumatic">Pneumatic</option>
-                                        <option value="Hydraulic">Hydraulic</option>
-                                        <option value="Manual">Manual</option>
-                                        <option value="N/A">N/A</option>
+                                        <option value="pneumatic">Pneumatic</option>
+                                        <option value="hydraulic">Hydraulic</option>
+                                        <option value="manual">Manual</option>
+                                        <option value="n/a">N/A</option>
                                     </select>
                                 </div>
                                 <div class="form-group-inline">
